--- a/client-jelly/src/main/resources/application.properties
+++ b/client-jelly/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.application.name=clientjelly
+spring.application.name=client-jelly
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=false
